fixed dropdown boxes wrap when the table is too narrow
this was previously fixes for individual tables, now it's a generic rule

--- a/extensions/gamebryo-plugin-management/src/stylesheets/plugin_management.scss
+++ b/extensions/gamebryo-plugin-management/src/stylesheets/plugin_management.scss
@@ -6,17 +6,6 @@
   text-align: center;
 }
 
-.table-gamebryo-plugins .dropdown {
-  display: inline-flex;
-}
-
-.table-gamebryo-plugins .dropdown > button,
-.table-gamebryo-plugins .dropup > button {
-  padding: 2px 10px;
-  border: 0px;
-  min-width: 100px;
-}
-
 #dropdown-gamebryo-plugins-enabled {
   padding: 2px 5px;
   border: 0px;
