--- a/extensions/mo-import/src/stylesheets/mo-import.scss
+++ b/extensions/mo-import/src/stylesheets/mo-import.scss
@@ -10,16 +10,6 @@
   }
 }
 
-.table-mo-mods-import .dropdown {
-  display: inline-flex;
-}
-
-.table-mo-mods-import .dropdown > button {
-  padding: 2px 10px;
-  border: 0px;
-  min-width: 100px;
-}
-
 .table-mo-mods-import.cell-local {
   text-align: center;
 }
