--- a/extensions/nmm-import-tool/src/stylesheets/import-tool.scss
+++ b/extensions/nmm-import-tool/src/stylesheets/import-tool.scss
@@ -4,16 +4,6 @@
   }
 }
 
-.table-mods-to-import .dropdown {
-  display: inline-flex;
-}
-
-.table-mods-to-import .dropdown > button {
-  padding: 2px 10px;
-  border: 0px;
-  min-width: 100px;
-}
-
 .table-mods-to-import.cell-local {
   text-align: center;
 }
