--- a/src/stylesheets/vortex/dialog-external-change.scss
+++ b/src/stylesheets/vortex/dialog-external-change.scss
@@ -47,26 +47,6 @@
   white-space: nowrap;
 }
 
-.table-external-change-refchange .dropdown > button,
-.table-external-change-refchange .dropup > button,
-.table-external-change-valchange .dropdown > button,
-.table-external-change-valchange .dropup > button,
-.table-external-change-deleted .dropdown > button,
-.table-external-change-deleted .dropup > button {
-  padding: 2px 10px;
-  border: 0px;
-  min-width: 100px;
-}
-
-.table-external-change-refchange .dropdown,
-.table-external-change-refchange .dropup,
-.table-external-change-valchange .dropdown,
-.table-external-change-valchange .dropup,
-.table-external-change-deleted .dropdown,
-.table-external-change-deleted .dropup {
-  display: inline-flex;
-}
-
 #dropdown-external-change-refchange-action,
 #dropdown-external-change-valchange-action,
 #dropdown-external-change-deleted-action {
